More Book structure.

--- a/rebuilding_ruby.tex
+++ b/rebuilding_ruby.tex
@@ -1,5 +1,28 @@
-\documentclass[a4paper,12pt]{book}
+\documentclass[oneside]{book}
+\date{}
 \begin{document}
-\chapter{Chapter 1: Lexers}
+\title{Rebuilding Ruby}
+\author{Matthew Mongeau}
+\maketitle
+
+\frontmatter
+\tableofcontents
+\chapter*{Preface}
+\addcontentsline{toc}{chapter}{Preface}
+
+\mainmatter
+\chapter{Tokenizing}
 What is a lexer? The job of a lexer is to read you code and identify what we call tokens. Tokens are simply named pieces of text.
+
+\newpage
+This is on another page.
+
+\chapter{Parsing}
+What is parsing? Parsing is verifying the structure of our code.
+
+\appendix
+\chapter{References}
+
+\backmatter
+\chapter{Notes}
 \end{document}
