--- a/book/reconstructing_ruby.tex
+++ b/book/reconstructing_ruby.tex
@@ -20,17 +20,17 @@ stringstyle=\ttfamily\color{orange}}
 \date{}
 
 \begin{document}
-\title{Rebuilding Ruby}
+\title{Reconstructing Ruby}
 \author{Matthew Mongeau}
 \maketitle
 
 \frontmatter
 \tableofcontents
-\input{preface}
+\input{book/preface}
 
 \mainmatter
-\input{chapter_1}
-\input{chapter_2}
+\input{book/chapter_1}
+\input{book/chapter_2}
 
 
 \appendix
