Change default font.

--- a/book/reconstructing_ruby.tex
+++ b/book/reconstructing_ruby.tex
@@ -1,7 +1,8 @@
 \documentclass[oneside]{book}
+\usepackage{inconsolata}
+\renewcommand{\familydefault}{\sfdefault}
 
 \usepackage{graphicx}
-\usepackage{inconsolata}
 \usepackage[dvipsnames]{xcolor}
 \usepackage{pdfpages}
 
