--- a/book/preface.tex
+++ b/book/preface.tex
@@ -1,7 +1,9 @@
 \chapter*{Preface}
-\addcontentsline{toc}{chapter}{Preface}
 
 This book is not a primer on C. It assumes that you have a passing knowledge of C programming. If you've never programmed in C before it's highly suggested that you read the book "C Programming Language, 2nd Edition" by Brian W. Kernighan and Dennis M. Ritchie -  which is often referred to as "K\&R".
 
+In addition this book expects its readers to be able to search online for terms not discussed in detail in this book.
+
 This book has been written for two purposes. The first is to provide a better understanding of Ruby's internals, potentially allowing readers to contribute to Ruby. A second goal is to provide a better understanding of interpreters in general. The second goal opens up the possibilities for readers to create their own interpreted languages.
 
+This book was heavily influenced by Pat Shaughnessy's "Ruby Under a Microscope".
