--- a/book/preface.tex
+++ b/book/preface.tex
@@ -7,3 +7,5 @@ In addition this book expects its readers to be able to search online for terms 
 This book has been written for two purposes. The first is to provide a better understanding of Ruby's internals, potentially allowing readers to contribute to Ruby. A second goal is to provide a better understanding of interpreters in general. The second goal opens up the possibilities for readers to create their own interpreted languages.
 
 This book was heavily influenced by Pat Shaughnessy's "Ruby Under a Microscope".
+
+In many ways, this book is just a very long tutorial with lots of "follow along and code" sections.
