--- a/book/reconstructing_ruby.tex
+++ b/book/reconstructing_ruby.tex
@@ -24,6 +24,8 @@
 
 \usepackage{listings}
 \usepackage[framemethod=tikz]{mdframed}
+\usepackage[cm]{fullpage}
+
 
 \lstdefinelanguage{Flex}{
   otherkeywords= {\%\%, \%\{, \%\}, \%option}
